--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-07  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+
 2004-05-06  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: Updated italian translation.
