2004-05-08  Sven Neumann  <sven@gimp.org>
	* app/display/gimpstatusbar.[ch]: renamed struct member combo to
	unit_combo. Place the combobox into the cursor frame.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13191 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-08  Sven Neumann  <sven@gimp.org>
 
+	* app/display/gimpstatusbar.[ch]: renamed struct member combo to
+	unit_combo. Place the combobox into the cursor frame.
+
+2004-05-08  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/Makefile.am
 	* app/widgets/widgets-types.h
 	* app/widgets/gimpunitcombobox.[ch]
