2004-05-08  Sven Neumann  <sven@gimp.org>
	* app/display/gimpstatusbar.c (gimp_statusbar_resize_cursor):
	added 1 pixel horizontal padding around the label.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13192 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-08  Sven Neumann  <sven@gimp.org>
 
+	* app/display/gimpstatusbar.c (gimp_statusbar_resize_cursor):
+	added 1 pixel horizontal padding around the label.
+
+2004-05-08  Sven Neumann  <sven@gimp.org>
+
 	* app/display/gimpstatusbar.[ch]: renamed struct member combo to
 	unit_combo. Place the combobox into the cursor frame.
 
