--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-08  Henrik Brix Andersen  <brix@gimp.org>
+
+	* plug-ins/common/screenshot.c (shoot_dialog): HIGify the
+	screenshot plug-in.
+
 2004-05-08  Sven Neumann  <sven@gimp.org>
 
 	* app/display/gimpstatusbar.c (gimp_statusbar_resize_cursor):
