HIGified, simplified and fixes #141733
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13195 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-08  Maurits Rijk  <m.rijk@chello.nl>
+
+	* plug-ins/common/spread.c: HIGified, simplified and fixes #141733
+	
 2004-05-08  Henrik Brix Andersen  <brix@gimp.org>
 
 	* plug-ins/common/screenshot.c (shoot_dialog): HIGify the
