--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-05-09  Hans Breuer  <hans@breuer.org>
+
+	Merge from stable branch :
+
+	* plug-ins/common/winclipboard.c : support gray images;
+	fixes bug #141382
+
+	* plug-ins/common/winprint.c : dito; fixes bug #141145
+
 2004-05-09  Maurits Rijk  <m.rijk@chello.nl>
 
 	* plug-ins/common/aa.c
