--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-05-10  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpuimanager.c: re-added help for menu items. Still
+	incomplete because there is no fallback help ID yet when pressing
+	F1 over a menu item which has a submenu. Added evil workaround and
+	version check for signal brokenness of GtkUIManager in GTK+ 2.4.1.
+
 2004-05-09  Hans Breuer  <hans@breuer.org>
 
 	Merge from stable branch :
