--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-05-10  Sven Neumann  <sven@gimp.org>
+
+	* app/config/gimpdisplayconfig.c (DEFAULT_IMAGE_TITLE_FORMAT):
+	removed the display scale from the default image title because
+	it's now displayed in the statusbar. Show the image pixel size
+	instead.
+
+	* app/gui/preferences-dialog.c: include a preset for the title
+	format string that shows the image size (bug #141720).
+
 2004-05-10  Michael Natterer  <mitch@gimp.org>
 
 	Prepare for making an interface out of GimpContainerView:
