Updated italian translation
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13204 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-10  Marco Ciampa  <ciampix@libero.it>
+
+        * it.po: Updated italian translation.
+
 2004-04-27  Andras Timar  <timar@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
