--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-10  Sven Neumann  <sven@gimp.org>
+
+	* gimp-tips.xml.in: the menu's called "Layer", not "Layers" (bug
+	#142279, spotted by Branko Collin).
+
 2004-04-20  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation by
