2004-05-10 Henrik Brix Andersen <brix@gimp.org>
* plug-ins/common/screenshot.c (shoot_dialog): fixed the spacing
of the dialog, thanks to Sven for pointing out my mistake.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13213 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-10  Henrik Brix Andersen  <brix@gimp.org>
+
+	* plug-ins/common/screenshot.c (shoot_dialog): fixed the spacing
+	of the dialog, thanks to Sven for pointing out my mistake.
+
 2004-05-10  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimptexteditor.c (gimp_text_editor_set_direction):
