--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-10  Sven Neumann  <sven@gimp.org>
+
+	* app/xcf/xcf-save.c (xcf_save_prop): fixed size of colormap
+	property. Patch by Daniel Kobras, fixes bug #142149.
+
 2004-05-10  Henrik Brix Andersen  <brix@gimp.org>
 
 	* plug-ins/common/screenshot.c (shoot_dialog): fixed the spacing
