2004-05-10  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimpframe.c (gimp_frame_style_set): removed a
	redundant call to gtk_widget_queue_resize().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13217 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-10  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimpframe.c (gimp_frame_style_set): removed a
+	redundant call to gtk_widget_queue_resize().
+
+2004-05-10  Sven Neumann  <sven@gimp.org>
+
 	* app/xcf/xcf-save.c (xcf_save_prop): fixed size of colormap
 	property. Patch by Daniel Kobras, fixes bug #142149.
 
