2004-05-10  Samúel Jón Gunnarsson  <sammi@techattack.nu>
	* is.po: Updated Icelandic translation by
	Áki G. Karlsson  <aki@akademia.is>


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13219 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-10  Samúel Jón Gunnarsson  <sammi@techattack.nu>
+
+	* is.po: Updated Icelandic translation by
+	Áki G. Karlsson  <aki@akademia.is>
+
 2004-05-07  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: Updated italian translation.
