--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-05-11  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimp.def
+	* libgimp/gimpui.def
+	* libgimpbase/gimpbase.def
+	* libgimpwidgets/gimpwidgets.def: updated.
+
 2004-05-10  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimpframe.c (gimp_frame_style_set): removed a
